Add slide content to file

--- a/_posts/0000-01-02-rhynerj.md
+++ b/_posts/0000-01-02-rhynerj.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+# Notable speeches by dolphins
+1. "So long, and thanks for all the fish."
 Use the left arrow to go back!
